--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -858,6 +858,64 @@ openarchiefbeheer:
 
 openklant:
   configuration:
+    enabled: true
+    initContainer:
+      enabled: false    
+    job:
+      enabled: true
+      backoffLimit: 6
+      ttlSecondsAfterFinished: 0    
+      restartPolicy: OnFailure
+      resources: {}
+    secrets: {}      
+    data: ""        
+    # data: |-
+    #   oidc_db_config_enable: True
+    #   oidc_db_config_admin_auth:
+    #     items:
+    #     - identifier: admin-oidc
+    #       enabled: True
+    #       oidc_rp_client_id: openklant.example.nl
+    #       oidc_rp_client_secret: ${keycloak_client_secret}
+    #       oidc_rp_scopes_list:
+    #       - openid
+    #       - email
+    #       - profile
+    #       - roles
+    #       oidc_rp_sign_algo: RS256
+    #       endpoint_config:
+    #         oidc_op_discovery_endpoint: https://keycloak.example.nl/realms/gemeente-x/
+    #       username_claim:
+    #       - sub
+    #       groups_claim:
+    #       - roles
+    #       claim_mapping:
+    #         first_name:
+    #         - given_name
+    #         last_name:
+    #         - family_name
+    #         email:
+    #         - email
+    #       sync_groups: true
+    #       sync_groups_glob_pattern: "*"
+    #       default_groups: []
+    #       make_users_staff: true
+    #       superuser_group_names:
+    #       - Superuser
+    #       oidc_use_nonce: true
+    #       oidc_nonce_size: 32
+    #       oidc_state_size: 32
+    #       userinfo_claims_source: id_token  
+    #   tokenauth_config_enable: true
+    #   tokenauth:
+    #     items:
+    #       - identifier: token-1
+    #         token: ${openklant_token}
+    #         contact_person: Person 1
+    #         email: test@example.com
+    #         organization: Organization XYZ
+    #         application: Application XYZ
+    #         administration: Administration XYZ    
     oidcUrl: https://openklant.example.nl
     oidcSecret: "<openklant>"
   settings:
@@ -895,8 +953,111 @@ openklant:
         
 openformulieren:
   configuration:
+    enabled: true
+    job:
+      enabled: true
+      backoffLimit: 6
+      ttlSecondsAfterFinished: 0    
+      restartPolicy: OnFailure
+    secrets: {}      
+    data: ""  
+    # data: |-
+    #   oidc_db_config_enable: True
+    #   oidc_db_config_admin_auth:
+    #     items:
+    #     - identifier: admin-oidc
+    #       enabled: True
+    #       oidc_rp_client_id: openformulieren.example.nl
+    #       oidc_rp_client_secret: ${keycloak_client_secret}
+    #       oidc_rp_scopes_list:
+    #       - openid
+    #       - email
+    #       - profile
+    #       - roles
+    #       oidc_rp_sign_algo: RS256
+    #       endpoint_config:
+    #         oidc_op_discovery_endpoint: https://keycloak.example.nl/realms/gemeente-x/
+    #       username_claim:
+    #       - sub
+    #       groups_claim:
+    #       - roles
+    #       claim_mapping:
+    #         first_name:
+    #         - given_name
+    #         last_name:
+    #         - family_name
+    #         email:
+    #         - email
+    #       sync_groups: true
+    #       sync_groups_glob_pattern: "*"
+    #       default_groups: []
+    #       make_users_staff: true
+    #       superuser_group_names:
+    #       - Superuser
+    #       oidc_use_nonce: true
+    #       oidc_nonce_size: 32
+    #       oidc_state_size: 32
+    #       userinfo_claims_source: id_token
+    #   zgw_consumers_config_enable: True
+    #   zgw_consumers:
+    #     services:
+    #     - identifier: objecttypen-api
+    #       label: Objecttypen API
+    #       api_root: https://objecten.example.nl/api/v2/
+    #       api_type: orc
+    #       auth_type: api_key
+    #       header_key: Authorization
+    #       header_value: Token ${openformulieren_objecten_token}
+
+    #     - identifier: objecten-api
+    #       label: Objecten API test
+    #       api_root: https://objecttypen.example.nl/api/v2/
+    #       api_type: orc
+    #       auth_type: api_key
+    #       header_key: Authorization
+    #       header_value: Token ${openformulieren_objecten_token}
+
+    #     - identifier: documenten-api
+    #       label: Documenten API
+    #       api_root: https://openzaak.example.nl/documenten/api/v1/
+    #       api_type: drc
+    #       auth_type: zgw
+    #       client_id: open-formulieren
+    #       secret: ${openzaak_openformulieren_secret}
+
+    #     - identifier: zaken-api
+    #       label: Zaken API
+    #       api_root: https://openzaak.example.nl/zaken/api/v1/
+    #       api_type: zrc
+    #       auth_type: zgw
+    #       client_id: open-formulieren
+    #       secret: ${openzaak_openformulieren_secret}
+
+    #     - identifier: catalogus-api
+    #       label: Catalogus API
+    #       api_root: https://openzaak.example.nl/catalogi/api/v1/
+    #       api_type: ztc
+    #       auth_type: zgw
+    #       client_id: open-formulieren
+    #       secret: ${openzaak_openformulieren_secret}
+    #   objects_api_config_enable: True
+    #   objects_api:
+    #     groups:
+    #     - name: Objects APIs
+    #       identifier: objects-api
+    #       objects_service_identifier: objecten-api
+    #       objecttypes_service_identifier: objecttypen-api
+    #       documenten_service_identifier: documenten-api
+    #       catalogi_service_identifier: catalogus-api
+    #       organisatie_rsin: "001876387"
+    #       document_type_submission_report: PDF Informatieobjecttype
+    #       document_type_submission_csv: CSV Informatieobjecttype
+    #       document_type_attachment: Attachment Informatieobjecttype
+    #       catalogue_domain: TEST
+    #       catalogue_rsin: "000000000"
+    #       organisatie_rsin: "000000000"
     oidcUrl: https://openformulieren.example.nl
-    oidcSecret: "<openformulieren>"
+    oidcSecret: "<openformulieren>"          
   settings:
     allowedHosts: openformulieren-nginx.podiumd.svc.cluster.local
     email:
@@ -952,6 +1113,116 @@ openformulieren:
 
 openinwoner:
   configuration:
+    enabled: true
+    initContainer:
+      enabled: false
+    job:
+      enabled: true
+      backoffLimit: 6
+      ttlSecondsAfterFinished: 0
+      restartPolicy: OnFailure
+      resources: {}
+    data: ""
+    # data: |-
+    #   oidc_db_config_enable: True
+    #   oidc_db_config_admin_auth:
+    #     items:
+    #     - identifier: admin-oidc
+    #       enabled: True
+    #       oidc_rp_client_id: openinwoner.example.nl
+    #       oidc_rp_client_secret: ${keycloak_client_secret}
+    #       oidc_rp_scopes_list:
+    #       - openid
+    #       - email
+    #       - profile
+    #       - roles
+    #       oidc_rp_sign_algo: RS256
+    #       endpoint_config:
+    #         oidc_op_discovery_endpoint: https://keycloak.example.nl/realms/gemeente-x/
+    #       username_claim:
+    #       - sub
+    #       groups_claim:
+    #       - roles
+    #       claim_mapping:
+    #         first_name:
+    #         - given_name
+    #         last_name:
+    #         - family_name
+    #       sync_groups: true
+    #       sync_groups_glob_pattern: "*"
+    #       default_groups: []
+    #       make_users_staff: true
+    #       superuser_group_names:
+    #       - Superuser
+    #       oidc_use_nonce: true
+    #       oidc_nonce_size: 32
+    #       oidc_state_size: 32
+    #       userinfo_claims_source: id_token
+    #   zgw_consumers_config_enable: True
+    #   zgw_consumers:
+    #     services:
+    #       - identifier: zaken-test
+    #         label: Open Zaak - Zaken API
+    #         api_root: https://openzaak.example.nl/zaken/api/v1/
+    #         api_type: zrc
+    #         auth_type: zgw
+    #         client_id: openinwoner
+    #         secret: ${openzaak_openinwoner_secret}
+    #       - identifier: documenten-test
+    #         label: Open Zaak - Documenten API
+    #         api_root: https://openzaak.example.nl/documenten/api/v1/
+    #         api_type: drc
+    #         auth_type: zgw
+    #         client_id: openinwoner
+    #         secret: ${openzaak_openinwoner_secret}
+    #       - identifier: catalogi-test
+    #         label: Open Zaak - Catalogi API
+    #         api_root: https://openzaak.example.nl/catalogi/api/v1/
+    #         api_type: ztc
+    #         auth_type: zgw
+    #         client_id: openinwoner
+    #         secret: ${openzaak_openinwoner_secret}
+    #       - identifier: besluiten-test
+    #         label: Open Zaak - Besluiten API
+    #         api_root: https://openzaak.example.nl/besluiten/api/v1/
+    #         api_type: brc
+    #         auth_type: zgw
+    #         client_id: openinwoner
+    #         secret: ${openzaak_openinwoner_secret}
+    #       - identifier: selectielijst
+    #         label: Open Zaak (public) - Selectielijst API
+    #         api_root: https://selectielijst.openzaak.nl/api/v1/
+    #         api_type: orc
+    #         auth_type: no_auth
+    #   openzaak_config_enable: true
+    #   openzaak_config:
+    #     zaak_max_confidentiality: openbaar
+    #     document_max_confidentiality: vertrouwelijk
+    #     max_upload_size: 50
+    #     skip_notification_statustype_informeren: false
+    #     reformat_esuite_zaak_identificatie: true
+    #     derive_zaak_titel_from: zaaktype_omschrijving
+    #     order_statuses_by_date_set: false
+    #     title_text: title text from setup configuration
+    #     enable_categories_filtering_with_zaken: true
+    #     action_required_deadline_days: 1874
+    #     zaken_filter_enabled: 'true'
+    #     allowed_file_extensions:
+    #       - .pdf
+    #       - .txt
+    #       - .doc
+    #       - .docx        
+    #     api_groups:
+    #       - zaken_api_identifier: zaken-test
+    #         documenten_api_identifier: documenten-test
+    #         catalogi_api_identifier: catalogi-test
+    #         fetch_eherkenning_zaken_with_rsin: true    
+    #   sites_config_enable: true
+    #   sites_config:
+    #     items:
+    #       - domain: openinwoner.example.nl
+    #         name: Gemeente X
+    secrets: {}    
     oidcUrl: https://openinwoner.example.nl
     oidcSecret: "<openinwoner>"
   settings:
