--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -808,7 +808,8 @@ kiss:
       name: ""
     image:
       repository: ghcr.io/klantinteractie-servicesysteem/kiss-frontend
-      tag: "release-1.0.x-20250418091744-8936963"
+      tag: "v1.0.1"
+
 
       pullPolicy: IfNotPresent
     resources:
